# symmetry-lattice-model

./: CMakeLists.txt  Makefile  README  depend.sh  todo.txt
IDEmanager/: IDEmanager.cbp  IDEmanager.layout
MetropolisGrowth/: module.mk
MetropolisGrowth/inc/: lattice.h  logfile.h  recordbutton.h  version.h
MetropolisGrowth/lib/libpng-1.2.50/: Makefile  config.status  libpng12.la  libtool
MetropolisGrowth/lib/libpng-1.2.50/.deps/: libpng12_la-png.Plo  libpng12_la-pngerror.Plo  libpng12_la-pngget.Plo  libpng12_la-pngmem.Plo  libpng12_la-pngpread.Plo  libpng12_la-pngread.Plo  libpng12_la-pngrio.Plo  libpng12_la-pngrtran.Plo  libpng12_la-pngrutil.Plo  libpng12_la-pngset.Plo  libpng12_la-pngtrans.Plo  libpng12_la-pngwio.Plo  libpng12_la-pngwrite.Plo  libpng12_la-pngwtran.Plo  libpng12_la-pngwutil.Plo  libpng_la-png.Plo  libpng_la-pngerror.Plo  libpng_la-pngget.Plo  libpng_la-pngmem.Plo  libpng_la-pngpread.Plo  libpng_la-pngread.Plo  libpng_la-pngrio.Plo  libpng_la-pngrtran.Plo  libpng_la-pngrutil.Plo  libpng_la-pngset.Plo  libpng_la-pngtrans.Plo  libpng_la-pngwio.Plo  libpng_la-pngwrite.Plo  libpng_la-pngwtran.Plo  libpng_la-pngwutil.Plo
MetropolisGrowth/lib/libpng-1.2.50/.libs/: libpng.so.3.50.0  libpng12.so.0.50.0
MetropolisGrowth/lib/libpng-1.4.12/: Makefile  config.status  libpng-config  libpng14.la  libpng14.pc  libtool
MetropolisGrowth/lib/libpng-1.4.12/.deps/: libpng14_la-png.Plo  libpng14_la-pngerror.Plo  libpng14_la-pngget.Plo  libpng14_la-pngmem.Plo  libpng14_la-pngpread.Plo  libpng14_la-pngread.Plo  libpng14_la-pngrio.Plo  libpng14_la-pngrtran.Plo  libpng14_la-pngrutil.Plo  libpng14_la-pngset.Plo  libpng14_la-pngtrans.Plo  libpng14_la-pngwio.Plo  libpng14_la-pngwrite.Plo  libpng14_la-pngwtran.Plo  libpng14_la-pngwutil.Plo
MetropolisGrowth/lib/libpng-1.4.12/.libs/: libpng14.lai  libpng14.so.14.12.0
MetropolisGrowth/lib/pngwriter-0.5.4/: configure  make.include.linux
MetropolisGrowth/src/: filehandler.d  interaction.d  lattice.cpp  lattice.d  latticefile.d  logfile.cpp  logfile.d  montecarlo.cpp  montecarlo.d  orderparamfile.cpp  orderparamfile.d  site.d  version.d
Metropolis_Growth/: Lattice.cpp  Lattice.h  MetropolisUML.xmi  Site.cpp  Site.h  anneal.cpp  filehandle.h  filehandler.cpp  filehandler.h  interaction.cpp  interaction.h  latTest.cpp  lattice.cpp  lattice.h  main.cpp  makefile  monteCarlo.cpp  monteCarlo.h  montecarlo.cpp  montecarlo.h  orderparam.cpp  orderparam.h  plotfile.gp  pngtest.cpp  site.h  testGNUplot.gnu  testSite.cpp  tester.cpp  version.h
ModelQT_GUI/: README  mainwindow.h  mainwindow.ui  simpleclass.cpp
ModelQT_GUI/inc/ModelQT_GUI/: mainwindow.h
ModelQT_GUI/src/: functionthread.cpp  main.cpp
ModelQT_GUI/ui/: mainwindow.ui
Nematic/JohnSearch/: Bead.cpp  Bead.cpp~  StringOhBeads.cpp~  StringOhBeads.h  beadWalk.cpp  beadWalk.cpp~  bead_tracker_3d_T_1.0000_R_24_Q_6.0000.txt  chkdir  main  phaseDiagram.cpp~
Nematic/LesterMetastability/: mep_J_1.2000_Q_20.0000_Q2_10.0000_T_1.0000_R_50.txt
Nematic/LesterPhaseDiagram/: #defaultrun.cmd#  #phase_diagram_3d.cpp#  phase_diagram_3d.cpp
inc/Metropolis_Growth/: filehandler.h  gp_script  lattice.h  makefile  montecarlo.h  ordPar_R8_J-1_Q2-3_Q4-0.csv  plotfile.gp  version.h
inc/ModelQT_GUI/: CMakeLists.txt  ModelQT_GUI.pro  README
inc/Nematic/JohnSearch/: StringOhBeads.cpp  stringFunc.cpp
inc/Nematic/LesterMetastability/: energy_J_1.2000_Q_20.0000_Q2_10.0000_T_1.0000_R_50.txt  star_mep_J_0.5000_Q_10.0000_Q2_90.0000_T_1.0000_R_256.txt
scripts/: FindPNGwriter.cmake  cmakeclean  gp_script  movie
src/: filehandler.cpp~  functionanddisplay.cpp  functionthread.cpp
subprojects/: CMakeLists.txt  README
subprojects/Metropolis_Growth/: CMakeLists.txt  MetropolisGrowth.cbp  MetropolisGrowth.layout
subprojects/Metropolis_Growth/MetropolisGrowth/: MetropolisGrowth.cbp  MetropolisGrowth.layout
subprojects/Metropolis_Growth/inc/Metropolis_Growth/: README  export.gp  filehandler.h  filehandler.h~  interaction.h  lattice.h  latticefile.h  makefile  montecarlo.h  orderparamfile.h  plotfile.gp  site.h
subprojects/Metropolis_Growth/scripts/: plotfile.gp
subprojects/Metropolis_Growth/src/: CMakeLists.txt  filehandler.cpp  interaction.cpp  lattice.cpp  latticefile.cpp  montecarlo.cpp  orderparamfile.cpp  site.cpp  version.cpp
subprojects/Metropolis_Growth/testbin/: Makefile  cmake_install.cmake  metrotest  ordPar_R8_J-1_Q2-3_Q4-0.csv  ordPar_R8_J-1_Q2-3_Q4-0_1.csv  ordPar_R8_J-1_Q2-3_Q4-0_2.csv
subprojects/Metropolis_Growth/testing/: CMakeLists.txt  metrotest.cpp  metrotest.cpp~
subprojects/ModelQT_GUI/: ModelQT_GUI.cbp  ModelQT_GUI.layout
subprojects/ModelQT_GUI/inc/ModelQT_GUI/: Makefile  README  functionanddisplay.h  functionthread.h  mainwindow.h  moc_functionthread.cxx  moc_mainwindow.cxx  simpleclass.h  ui_mainwindow.h
subprojects/ModelQT_GUI/src/: functionthread.cpp  latTest.cpp  mainwindow.cpp
subprojects/ModelQT_GUI/ui/: README  mainwindow.ui
subprojects/Nematic/JohnSearch/: Bead.h  Bead.h~  StringOhBeads.h~  beadWalk.cpp  bead_tracker_3d_T_1.0000_R_24_Q_0.2000.txt  bead_tracker_3d_T_1.0000_R_24_Q_3.0000.txt  makefile  phaseDiagram.cpp  stringFunc.cpp~
subprojects/Nematic/LesterMetastability/: direct_energy_J_1.2000_Q_20.0000_Q2_10.0000_T_1.0000_R_50.txt  str_meth_3d.out  string_method_3d.cpp  string_method_3d.cpp~  super_star_mep_J_4.0000_Q_9.0000_Q2_20.0000_T_1.0000_R_1256.txt
subprojects/Nematic/LesterPhaseDiagram/: defaultRun.cmd  txt2csv.pl
subprojects/Nematic/Results/: 0524-1_T_1_R_30.txt  0524-2_T_1_R_256.txt
